# nexrad

./: .cargo-release.toml  .gitattributes  .gitignore  Cargo.toml  NEXRAD_SWEEP_TIMING_ANALYSIS.md  README.md  reflectivity_points.geojson  reflectivity_polygons.geojson
nexrad/: .gitignore  Cargo.toml  README.md
nexrad-data/: .gitignore  Cargo.toml  README.md
nexrad-data/benches/: scan.rs
nexrad-data/examples/: archive.rs  aws.rs  chunk_csv.rs  chunk_iterator.rs  chunk_timing.rs  decoding_realtime.rs  download_realtime.rs  enumerate_volumes.rs  latency_analysis.rs  list_volume.rs  realtime.rs  trim_fixture.rs
nexrad-data/fuzz/: Cargo.toml
nexrad-data/fuzz/fuzz_targets/: decompress_record.rs  split_records.rs
nexrad-data/src/: archive.rs  aws.rs  lib.rs  realtime.rs  result.rs  volume.rs
nexrad-data/src/archive/: file.rs  header.rs  identifier.rs  record.rs
nexrad-data/src/aws/: README.md  archive.rs  client.rs  realtime.rs  s3.rs  search.rs
nexrad-data/src/realtime/: chunk.rs  file.rs
nexrad-data/src/volume/: README.md  file.rs  header.rs  identifier.rs  record.rs  util.rs
nexrad-data/tests/: aws_archive.rs  aws_realtime_network.rs  aws_realtime_polling.rs  aws_realtime_types.rs  error_handling.rs  fixture_integration.rs  live_decode.rs  malformed_records.rs  volume_header.rs  volume_records.rs  volume_scan.rs
nexrad-decode/: Cargo.toml  README.md
nexrad-decode/benches/: decode_messages.rs
nexrad-decode/examples/: README.md  digital_radar_data_message.rs  elevation_angles.rs  message_header.rs
nexrad-decode/examples/data/: README.md  digital_radar_data_message  message_header
nexrad-decode/fuzz/: Cargo.toml
nexrad-decode/fuzz/fuzz_targets/: decode_messages.rs
nexrad-decode/src/: binary_data.rs  lib.rs  messages.rs  reader.rs  result.rs  segmented_slice_reader.rs  slice_reader.rs  summarize.rs  util.rs
nexrad-decode/src/messages/: clutter_filter_map.rs  digital_radar_data.rs  message.rs  message_contents.rs  message_header.rs  message_type.rs  mod.rs  primitive_aliases.rs  rda_status_data.rs  volume_coverage_pattern.rs
nexrad-decode/src/model/: archive2_header.rs
nexrad-decode/src/summarize/: group.rs  message.rs  rda.rs  vcp.rs
nexrad-decode/tests/: extract_fixtures.rs  generate_synthetic_fixtures.rs  kcrp_debug.rs  malformed_input.rs  message_snapshots.rs  snapshot.rs  version_compat.rs  volume_decode.rs  volume_records.rs
nexrad-decode/tests/snapshots/: message_snapshots__digital_radar_data_full.snap  message_snapshots__rda_status_data.snap  message_snapshots__volume_coverage_pattern.snap  snapshot__Record 0.snap  snapshot__Record 1.snap  snapshot__Record 10.snap  snapshot__Record 100.snap  snapshot__Record 101.snap  snapshot__Record 102.snap  snapshot__Record 103.snap  snapshot__Record 104.snap  snapshot__Record 105.snap  snapshot__Record 11.snap  snapshot__Record 12.snap  snapshot__Record 13.snap  snapshot__Record 14.snap  snapshot__Record 15.snap  snapshot__Record 16.snap  snapshot__Record 17.snap  snapshot__Record 18.snap  snapshot__Record 19.snap  snapshot__Record 2.snap  snapshot__Record 20.snap  snapshot__Record 21.snap  snapshot__Record 22.snap  snapshot__Record 23.snap  snapshot__Record 24.snap  snapshot__Record 25.snap  snapshot__Record 26.snap  snapshot__Record 27.snap  snapshot__Record 28.snap  snapshot__Record 29.snap  snapshot__Record 3.snap  snapshot__Record 30.snap  snapshot__Record 31.snap  snapshot__Record 32.snap  snapshot__Record 33.snap  snapshot__Record 34.snap  snapshot__Record 35.snap  snapshot__Record 36.snap  (+70 more)
nexrad-inspector/: Cargo.toml  README.md
nexrad-inspector/src/: app.rs  main.rs
nexrad-inspector/src/data/: loader.rs  mod.rs
nexrad-inspector/src/ui/: browser_view.rs  file_view.rs  hex_view.rs  loading_view.rs  menu_view.rs  message_view.rs  mod.rs  record_view.rs  text_input.rs
nexrad-model/: Cargo.toml  LICENSE  README.md
nexrad-model/src/: binary_data.rs  data.rs  geo.rs  lib.rs  meta.rs  result.rs
nexrad-model/src/data/: channel_configuration.rs  elevation_cut.rs  field.rs  moment.rs  product.rs  pulse_width.rs  radial.rs  scan.rs  sweep.rs  vcp_number.rs  volume_coverage_pattern.rs  waveform_type.rs
nexrad-model/src/field/: cartesian_grid.rs  convert.rs  error.rs  grid_spec.rs  mod.rs  polar_sweep.rs
nexrad-model/src/meta/: mod.rs  registry.rs  site.rs
nexrad-model/tests/: fixture_snapshots.rs  model_types.rs  scan_snapshot.rs
nexrad-model/tests/snapshots/: fixture_snapshots__clear_air_plains_metadata.snap  fixture_snapshots__clear_air_plains_moment_stats.snap  fixture_snapshots__existing_kdmx_metadata.snap  fixture_snapshots__existing_kdmx_moment_stats.snap  fixture_snapshots__hurricane_harvey_metadata.snap  fixture_snapshots__hurricane_harvey_moment_stats.snap  fixture_snapshots__modern_build_kdmx_metadata.snap  fixture_snapshots__modern_build_kdmx_moment_stats.snap  fixture_snapshots__stratiform_noreaster_metadata.snap  fixture_snapshots__stratiform_noreaster_moment_stats.snap  fixture_snapshots__supercell_texas_metadata.snap  fixture_snapshots__supercell_texas_moment_stats.snap  fixture_snapshots__tornado_may2019_metadata.snap  fixture_snapshots__tornado_may2019_moment_stats.snap  fixture_snapshots__winter_greatlakes_metadata.snap  (+1 more)
nexrad-netcdf/: Cargo.toml  README.md
nexrad-netcdf/examples/: convert_latest.rs
nexrad-netcdf/src/: lib.rs  result.rs
nexrad-process/: Cargo.toml  README.md
nexrad-process/src/: lib.rs  pipeline.rs  result.rs
nexrad-process/src/derived/: mod.rs  (+3 more)
nexrad-render/: .gitignore  Cargo.toml  README.md
nexrad-render/benches/: render_radials.rs
nexrad-render/examples/: render.rs
nexrad-render/src/: color.rs  lib.rs  render_result.rs  result.rs
nexrad-render/tests/: color_scale.rs  interpolation.rs  partial_sweep.rs  product.rs  render_options.rs
nexrad/examples/: decode.rs  decode_summary.rs  download_latest.rs  processing_pipeline.rs  reflectivity_to_geojson.rs  render_reflectivity.rs  showcase.rs  timing_analysis.rs
nexrad/src/: decode.rs  decompress.rs  lib.rs  model.rs  prelude.rs  result.rs
nexrad/tests/: error_conversions.rs
(+381 files in other folders)
