[workspace]
resolver = "2"
members = [
    "nexrad",
    "nexrad-model",
    "nexrad-decode",
    "nexrad-data",
    "nexrad-render",
]

[workspace.dependencies]
log = { version = "0.4.27" }
clap = { version = "4.5.43", features = ["derive"] }
chrono = { version = "0.4.41" }
uom = { version = "0.37.0" }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { version = "2.0.12" }
bincode = { version = "1.3.3" }
reqwest = { version = "0.12.22", default-features = false, features = [
    "rustls-tls",
] }
xml = { version = "0.8.20" }
bzip2 = { version = "0.6.0" }
bzip2-rs = { version = "0.1.2" }
rayon = { version = "1.10.0" }
tokio = { version = "1.47.1", features = ["full"] }
env_logger = { version = "0.11.8" }
piet = { version = "0.7.0", features = ["png"] }
piet-common = { version = "0.7.0", features = ["png"] }
