[workspace]
resolver = "2"
members = [
    "nexrad",
    "nexrad-model",
    "nexrad-decode",
    "nexrad-data",
    "nexrad-render",
    "nexrad-inspector",
]

[profile.bench]
debug = true

[workspace.dependencies]
log = { version = "0.4.28" }
clap = { version = "4.5.48", features = ["derive"] }
chrono = { version = "0.4.42" }
uom = { version = "0.37.0" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = { version = "2.0.16" }
bincode = { version = "1.3.3" }
reqwest = { version = "0.12.23", default-features = false, features = [
    "rustls-tls",
] }
xml = { version = "1.0.0" }
bzip2 = { version = "0.6.0" }
bzip2-rs = { version = "0.1.2" }
rayon = { version = "1.11.0" }
tokio = { version = "1.47.1", features = ["full"] }
env_logger = { version = "0.11.8" }
piet = { version = "0.8.0", features = ["png"] }
piet-common = { version = "0.8.0", features = ["png"] }
insta = { version = "1.43.2", features = ["yaml", "redactions"] }
sha2 = "0.10.9"
hex = "0.4.3"
criterion = { version = "0.8.1" }
zerocopy = { version = "0.8.30", features = ["derive"] }
ratatui = { version = "0.29" }
crossterm = { version = "0.28" }
