[package]
name = "nexrad-data"
version = "0.2.0"
description = "Data access for NEXRAD weather radar files and AWS integration."
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["aws", "nexrad-model"]
aws = ["reqwest", "xml", "tokio"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
zerocopy = { workspace = true }
bzip2 = { workspace = true }
nexrad-decode = { version = "0.1.1", path = "../nexrad-decode" }
reqwest = { workspace = true, optional = true }
xml = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
nexrad-model = { version = "1.0.0-rc.1", path = "../nexrad-model", optional = true }

[dev-dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "realtime"
path = "examples/realtime.rs"
required-features = ["aws"]

[[example]]
name = "archive"
path = "examples/archive.rs"
required-features = ["aws"]

[[example]]
name = "latency_analysis"
path = "examples/latency_analysis.rs"
required-features = ["aws"]

[[example]]
name = "chunk_timing"
path = "examples/chunk_timing.rs"
required-features = ["aws"]

[[example]]
name = "chunk_csv"
path = "examples/chunk_csv.rs"
required-features = ["aws"]
