[package]
name = "nexrad-decode"
version = "1.0.0-rc.2"
description = "Binary protocol decoding for NEXRAD weather radar data."
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["uom", "nexrad-model"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
nexrad-model = { version = "1.0.0-rc.1", path = "../nexrad-model", optional = true }
uom = { workspace = true, optional = true }
sha2 = { workspace = true }
hex = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
insta = { workspace = true }
nexrad-data = { version = "1.0.0-rc.4", path = "../nexrad-data" }
criterion = { workspace = true }

[[example]]
name = "elevation_angles"
path = "examples/elevation_angles.rs"

[[bench]]
name = "decode_messages"
harness = false
