[package]
name = "nexrad-inspector"
version = "0.1.0"
description = "Interactive TUI for inspecting NEXRAD Archive II volume files."
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords = ["nexrad", "radar", "weather", "tui", "inspector"]
categories = ["command-line-utilities", "visualization"]

[[bin]]
name = "nexrad-inspector"
path = "src/main.rs"

[dependencies]
ratatui = { workspace = true }
crossterm = { workspace = true }
clap = { workspace = true }
nexrad-data = { path = "../nexrad-data", features = ["aws"] }
nexrad-decode = { path = "../nexrad-decode" }
nexrad-model = { path = "../nexrad-model" }
chrono = { workspace = true }
zerocopy = { workspace = true }
tokio = { workspace = true }
