[package]
name = "nexrad-model"
version = "0.1.0-rc3"
description = "Common model for NEXRAD weather radar data."
authors = ["Daniel Way <contact@danieldway.com>"]
repository = "https://github.com/danielway/nexrad/nexrad-model"
license = "MIT"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true, optional = true }
uom = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
