[package]
name = "nexrad-model"
version = "0.1.0"
description = "Common model for NEXRAD weather radar data."
authors = ["Daniel Way <contact@danieldway.com>"]
repository = "https://github.com/danielway/nexrad/nexrad-model"
license = "MIT"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true, optional = true }
uom = { workspace = true, optional = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
nexrad-data = { version = "0.2.0", path = "../nexrad-data" }
nexrad-decode = { version = "0.1.1", path = "../nexrad-decode" }
