[package]
name = "nexrad-model"
version = "1.0.0-rc.1"
description = "Core data model for NEXRAD weather radar data."
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
serde = ["dep:serde"]
chrono = ["dep:chrono"]
uom = ["dep:uom"]

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true, optional = true }
uom = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
nexrad-data = { version = "1.0.0-rc.2", path = "../nexrad-data" }
nexrad-decode = { version = "1.0.0-rc.1", path = "../nexrad-decode" }
