[package]
name = "nexrad-render"
version = "1.0.0-rc.1"
description = "Rendering functions for NEXRAD weather radar data visualization."
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["science", "visualization", "rendering"]

[dependencies]
thiserror = { workspace = true }
piet = { workspace = true }
piet-common = { workspace = true }
nexrad-model = { version = "1.0.0-rc.1", path = "../nexrad-model" }

[dev-dependencies]
nexrad-decode = { version = "1.0.0-rc.2", path = "../nexrad-decode" }
nexrad-data = { version = "1.0.0-rc.2", path = "../nexrad-data" }
