[package]
name = "nexrad-render"
version = "1.0.0-rc.3"
description = "Rendering functions for NEXRAD weather radar data visualization."
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["science", "visualization", "rendering"]

[dependencies]
thiserror = { workspace = true }
nexrad-model = { version = "1.0.0-rc.1", path = "../nexrad-model" }
image = "0.25"

[dev-dependencies]
nexrad-decode = { version = "1.0.0-rc.2", path = "../nexrad-decode" }
nexrad-data = { version = "1.0.0-rc.4", path = "../nexrad-data" }
criterion = { workspace = true }

[[bench]]
name = "render_radials"
harness = false
