[package]
name = "nexrad"
version = "1.0.0-rc.3"
description = "Download and decode functions for NEXRAD radar data."
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["full"]

# Core crate features
model = ["dep:nexrad-model"]
decode = ["dep:nexrad-decode"]
data = ["dep:nexrad-data"]
render = ["dep:nexrad-render", "model"]

# Pass-through features from sub-crates
serde = ["nexrad-model?/serde"]
uom = ["nexrad-model?/uom", "nexrad-decode?/uom"]
chrono = ["nexrad-model?/chrono", "dep:chrono"]
parallel = ["nexrad-data?/parallel"]
# Basic AWS S3 access (WASM-compatible)
aws = ["data", "chrono", "nexrad-data?/aws"]
# Real-time polling functionality (requires tokio, not WASM-compatible)
aws-polling = ["aws", "nexrad-data?/aws-polling", "tokio", "dep:futures"]

# All WASM-compatible features
wasm = ["model", "decode", "data", "render", "aws", "serde", "uom", "chrono"]
# Convenience feature for everything (includes native-only features, not WASM-compatible)
full = ["wasm", "aws-polling", "parallel"]

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true, optional = true }
nexrad-model = { version = "1.0.0-rc.1", path = "../nexrad-model", optional = true }
nexrad-decode = { version = "1.0.0-rc.2", path = "../nexrad-decode", optional = true }
nexrad-data = { version = "1.0.0-rc.4", path = "../nexrad-data", optional = true }
nexrad-render = { version = "1.0.0-rc.3", path = "../nexrad-render", optional = true }
futures = { workspace = true, optional = true }

# tokio is only available on non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true }

[[example]]
name = "decode_summary"
required-features = ["model", "data"]

[[example]]
name = "download_latest"
required-features = ["aws", "model"]

[[example]]
name = "render_reflectivity"
required-features = ["render", "data"]

