[package]
name = "nexrad-decode-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nexrad-decode = { path = ".." }

[[bin]]
name = "decode_messages"
path = "fuzz_targets/decode_messages.rs"
test = false
doc = false
bench = false
